@@ -1,20 +1,21 @@
 #!/bin/sh
 # install-dot-exe.sh  -- add .exe for cygnus gnu-windows
-# hack for doos install; cygnus should support rpm
+# hack for doos install
 
 realinstall=install
 
 args=''
 while [ $# -ne 0 ] 
 do
+    x=`echo $1 | sed 's@//@/@g'`
     case $1 in
-	-*) args="$args $1"
+	-*) args="$args $x"
 	    ;;
 
 	 *) if [ -f $1.exe ]; then
-		args="$args $1.exe"
+		args="$args $x.exe"
 	    else
-		args="$args $1"
+		args="$args $x"
 	    fi
 	    ;;
     esac
